# code-search

./: .gitignore  AGENT.md  BOTTOM_UP_PARSING.md  CACHING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EVALUATION.md  GETTING_STARTED.md  GITHUB_ISSUE_EDUCATIONAL_ENHANCEMENT.md  HOW_TO_READ_THIS_REPOSITORY.md  ISSUE_140_COMPLETION_SUMMARY.md  LEARNING.md  PERFORMANCE_ANALYSIS.md  PHASE2_IMPROVEMENTS.md  README.md  RELEASE_GUIDE.md  RUST_BOOK_EXAMPLES.md  STRATEGY.md  benchmark_results.txt  debug_token  generate_large_translation.js
.github/workflows/: benchmark.yml  ci.yml  release.yml
.specify/memory/: constitution.md
Formula/: cs.rb
benches/: cache_impact_test.rs  format_performance_benchmark.rs  large_files_benchmark.rs  minimal_test.rs  search_benchmark.rs  simple_format_test.rs
npm/: install.js  package.json
scripts/: benchmark_fixtures.sh  benchmark_vs_rg.sh  install-hooks.sh  release.sh  release_homebrew.sh  simple_benchmark.sh
simple_test/: en.js
src/: debug_event.rs  debug_scanner.rs  debug_token.rs  error.rs  lib.rs  main.rs  smart_pointers_analysis.md
src/cache/: mod.rs
src/config/: exclusions.rs  mod.rs  patterns.rs
src/output/: formatter.rs  mod.rs  simple_formatter.rs
src/parse/: js_parser.rs  json_parser.rs  key_extractor.rs  (+4 more)
tests/: call_extractor_test.rs  call_trace_fixtures_test.rs  cli_integration_test.rs  cli_test.rs  context_display_test.proptest-regressions  context_display_test.rs  cross_case_test.rs  error_messages_test.rs  error_stream_test.proptest-regressions  error_stream_test.rs  formatter_test.proptest-regressions  formatter_test.rs  formatter_trace_test.rs  graph_builder_test.rs  js_parser_performance_test.rs  json_parser_performance_test.rs  json_support_test.rs  orchestrator_test.rs  parser_test.rs  pattern_match_test.rs  real_world_i18n_test.rs  reproduce_issue_0.rs  search_test.rs  sitter_new_languages_test.rs  sitter_robustness_test.rs  tree_builder_test.rs
tools/: benchmark_oss.sh
(+56 files in other folders)
