[package]
name = "code-search-cli"
version = "0.2.0"
edition = "2021"
authors = ["Code Search Contributors"]
description = "Intelligent code search tool for tracing text (UI text, function names, variables) to implementation code"
license = "Apache-2.0"
repository = "https://github.com/weima/code-search"
readme = "README.md"
keywords = ["cli", "i18n", "search", "translation", "code-search"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = ["tools/release"]

[lib]
name = "cs"
path = "src/lib.rs"

[[bin]]
name = "cs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
colored = "2.0"
yaml-rust = "0.4"
# Ripgrep as a library
grep-searcher = "0.1"
grep-matcher = "0.1"
grep-regex = "0.1"
ignore = "0.4"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-ruby = "0.20"
tree-sitter-c-sharp = "0.20"
tree-sitter-embedded-template = "0.20"
# Caching dependencies
sled = "0.34"
bincode = "1.3"
dirs = "5.0"
hashbrown = "0.14"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
criterion = "0.5"

[[test]]
name = "graph_builder_test"
path = "tests/graph_builder_test.rs"

[[test]]
name = "integration_basic_search"
path = "tests/integration/basic_search.rs"

[[test]]
name = "integration_multi_match"
path = "tests/integration/multi_match.rs"

[[test]]
name = "integration_error_cases"
path = "tests/integration/error_cases.rs"

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "large_files_benchmark"
harness = false

[[test]]
name = "integration_rg_args"
path = "tests/integration/rg_args.rs"
